# OOP3

./: Array.cpp  Array.h  CMakeLists.txt  Figure.h  Hexagon.cpp  Hexagon.h  Octagon.cpp  Octagon.h  Pentagon.cpp  Pentagon.h  main.cpp  tests.cpp
include/: figure.h  hexagon.h  octagon.h  pentagon.h
src/: figure.cpp  hexagon.cpp  main.cpp  octagon.cpp  pentagon.cpp
tests/: test_main.cpp
